--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
